--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -633,7 +633,7 @@ in this chapter).
 %---------------------------------------
 \begin{theorem}[\thmd{Sufficient statistic theorem}]
 \footnote{
-  \citePpc{fisher1922}{316}{``Criterion of Sufficiency}
+  \citePpc{fisher1922}{316}{``Criterion of Sufficiency"}
   }
 \label{thm:sstat}
 \index{optimal receiver}
@@ -2301,7 +2301,7 @@ as follows:
       1  & x_5 & x_5^2
    \end{array}\right]
    }{Vandermonde matrix \footnotemark}
-   \addtocounter{footnote}{-1}\citetbl{\citer{horn}{29}}
+   \addtocounter{footnote}{-1}\footnote{\citer{horn}{29}}
    \qquad\qquad
    \estn \eqd
    \left[\begin{array}{l}
@@ -2399,7 +2399,7 @@ Thus, steepest descent algorithms do not use second derivative information.
 \thmbox{
   \vp_n = \vp_{n-1} - \eta_{n-1} \;\left[ \gradxy{\vp}{\fCost(\vp_n)} \right]
 }
-\paragraph{Least Mean Squares (LMS).}\citetbl{\citerp{mik}{526}}
+\paragraph{Least Mean Squares (LMS).}\footnote{\citerp{mik}{526}}
 This is a special case of \hie{steepest descent}.
 In minimum mean square estimation \xref{sec:est_mms},
 the cost function $\fCost(\vp)$ is defined as a
@@ -2460,7 +2460,7 @@ and lets $R=H^{-1}$.
 \end{align*}
 
 \if 0
-\paragraph{RLS with forgetting}\citetbl{\citerp{nelles2001}{64}}
+\paragraph{RLS with forgetting}\footnote{\citerp{nelles2001}{64}}
 This algorithm introduces a forgetting factor $\lambda$
 to help the algorithm track non-stationary channels.
 \begin{align*}
@@ -2471,7 +2471,7 @@ to help the algorithm track non-stationary channels.
 \end{align*}
 \fi
 
-\paragraph{Recursive Least Squares (RLS)}\citetbl{\citerp{nelles2001}{66}}
+\paragraph{Recursive Least Squares (RLS)}\footnote{\citerp{nelles2001}{66}}
 This algorithm is a special case of either the RLS with forgetting
 or the Kalman filter.
 \begin{align*}
