--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1842,20 +1842,20 @@
  \newcommand{\estNP}  [1][\theta] {\est[#1]{np}}  % Neyman-Pearson
  \newcommand{\estMS}  [1][\theta] {\est[#1]{mms}} % minimum mean square
  \newcommand{\estLS}  [1][\theta] {\est[#1]{ls}} % least square
- \newcommand{\estH}   [1][\theta] {\hat{\fH}}     % estimated transfer function
+ \newcommand{\estH}    {\hat{\fH}}     % estimated transfer function
  \newcommand{\estHs}   {\estH_{\mathsfup{s}}}  % scaled transfer function estimator
- \newcommand{\estHkp}   {\estH_{\mathsfup{\kappa}}}  % White's transfer function estimator
+ \newcommand{\estHkp}  {\estH_{\mathsfup{\kappa}}}  % White's transfer function estimator
  \newcommand{\estHa}   {\estH_{\mathsfup{1}}}  % H1
  \newcommand{\estHb}   {\estH_{\mathsfup{2}}}  % H2
  \newcommand{\estHw}   {\estH_{\mathsfup{w}}}  % White's transfer function estimator
  \newcommand{\estHv}   {\estH_{\mathsfup{v}}}  % total least squares estimator
  \newcommand{\estHc}   {\estH_{\mathsfup{c}}}  % 
- \newcommand{\estHam}   {\estH_{\mathsfup{am}}}  % 
- \newcommand{\estHgm}   {\estH_{\mathsfup{gm}}}  % 
- \newcommand{\estHhm}   {\estH_{\mathsfup{hm}}}  % 
- \newcommand{\estHls}   {\estH_{\mathsfup{ls}}}  % 
- \newcommand{\estG}{\hat{\fG}}
- \newcommand{\estGls}   {\estG_{\mathsfup{ls}}}  % 
+ \newcommand{\estHam}  {\estH_{\mathsfup{am}}}  % 
+ \newcommand{\estHgm}  {\estH_{\mathsfup{gm}}}  % 
+ \newcommand{\estHhm}  {\estH_{\mathsfup{hm}}}  % 
+ \newcommand{\estHls}  {\estH_{\mathsfup{ls}}}  % 
+ \newcommand{\estG}    {\hat{\fG}}
+ \newcommand{\estGls}  {\estG_{\mathsfup{ls}}}  % 
 
  \newcommand{\fCost}[0]{\mathfnct{C}}
  \newcommand{\fCostrq}[0]{\fCost_{\mathsfup{rq}}}
@@ -1869,20 +1869,20 @@
 
  \newcommand{\hhcmp}[0]{{\mathfnct{h}}}
  \newcommand{\rchan}[0]{{\mathfnct{R}}}
- \newcommand{\rcode}[0]{{\mathfnct{r}_c}}
- \newcommand{\rsym} [0]{{\mathfnct{r}_s}}
- \newcommand{\mCmn} [0]{{\mathfnct{C}_{mn}}}
- \newcommand{\mCmm} [0]{{\mathfnct{C}_{mm}}}
+ \newcommand{\rcode}[0]{{\mathfnct{r}_{\mathsfup{c}}}}
+ \newcommand{\rsym} [0]{{\mathfnct{r}_{\mathsfup{s}}}}
+ \newcommand{\mCmn} [0]{{\mathfnct{C}_{\mathsfup{mn}}}}
+ \newcommand{\mCmm} [0]{{\mathfnct{C}_{\mathsfup{mm}}}}
 
  \newcommand{\su}     {u}
  \newcommand{\sue}    {\hat{su}}
  \newcommand{\ue}     {\hat{u}}
  \newcommand{\opSys}  {\opS}
  \newcommand{\opCTi}  {\opC}
- \newcommand{\opCan}  {\opC_a}
- \newcommand{\opCawgn}{\opC_{awgn}}
- \newcommand{\opCagn} {\opC_{agn}}
- \newcommand{\opCawn} {\opC_{awn}}
+ \newcommand{\opCan}  {\opC_{\mathsfup{a}}}
+ \newcommand{\opCawgn}{\opC_{\mathsfup{awgn}}}
+ \newcommand{\opCagn} {\opC_{\mathsfup{agn}}}
+ \newcommand{\opCawn} {\opC_{\mathsfup{awn}}}
  \newcommand{\fdotr}  {\dot{r}}
  \newcommand{\fdotn}  {\dot{n}}
  \newcommand{\fdotlam}{\dot{\lambda}}
@@ -1908,25 +1908,25 @@
 %--------------------------------------
 \renewenvironment{proof}
   {
-    \pencilTipDown%                            pencil with tip down
-    {\scshape\footnotesize Proof: }  %
-    \begin{small}                      %change font size
-  }
-  {
-    \end{small}                        % end new font size
-    \hfill\pencilFlat%                        pencil lying flat
-  }
-
-\newenvironment{proofns}
-  {
-    \pencilTipDown%                       pencil with tip down
+    \pencilTipDown%
     {\scshape\footnotesize Proof: }%
-    \begin{small}%                        change font size
-  }
-  {
-    \end{small}%                          end new font size
-    \hfill\pencilFlat%                    pencil lying flat
-  }
+    \begin{small}%
+  }%
+  {%
+    \end{small}%
+    \hfill\pencilFlat%
+  }%
+
+%20190405\newenvironment{proofns}
+%20190405  {
+%20190405    \pencilTipDown%                       pencil with tip down
+%20190405    {\scshape\footnotesize Proof: }%
+%20190405    \begin{small}%                        change font size
+%20190405  }
+%20190405  {
+%20190405    \end{small}%                          end new font size
+%20190405    \hfill\pencilFlat%                    pencil lying flat
+%20190405  }
 
 %---------------------------------------
 % formula boxes
