latestimation illustration. proofns==>proof

--- a/common/boolean.tex
+++ b/common/boolean.tex
@@ -108,9 +108,9 @@ Several examples of \structe{Boolean lattice}s are illustrated in \prefpp{ex:lat
   \end{array}$.
   }
 \end{proposition}
-\begin{proofns}
+\begin{proof}
 This follows directly from \prefpp{def:boolean}.
-\end{proofns}
+\end{proof}
 
 %Because the axioms 1--4 of \pref{def:booalg} (previous definition) are \prope{self-dual}
 %and just as in the more general case of lattices (\prefp{thm:lat_duality}),
