--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -79,50 +79,51 @@ it often yields an estimate that is not optimal in the ML sense.
 \section{Estimation criterion}
 \label{sec:est_criterion}
 %--------------------------------------
-\begin{figure}[ht]
+\begin{figure}[h]
 \centering%
-\setlength{\unitlength}{0.2mm}
-\begin{picture}(650,350)(-400,-250)
-  \thicklines
-  %\graphpaper[10](0,0)(700,100)
-  \put(- 50,  50){\framebox(100, 50)[c]{Bayesian}          }
-  \put(  60,  50){\makebox (200, 50)[l]{pdf known and cost function defined}}
-  \put(   0,   0){\line    (  0,  1)   { 50}               }
-  \put(-200,   0){\line    (  1,  0)   {400}               }
-  \put(-200,- 50){\line    (  0,  1)   { 50}               }
-  \put( 200,- 50){\line    (  0,  1)   { 50}               }
-
-  \put(-190,- 50){\makebox (100, 50)[l]{pdf known}         }
-  \put( 210,- 50){\makebox (100, 50)[l]{pdf not known}     }
-  \put(-350,- 50){\line    (  1,  0)   {300}               }
-  \put(-350,-100){\line    (  0,  1)   { 50}               }
-  \put(-200,-100){\line    (  0,  1)   { 50}               }
-  \put(- 50,-100){\line    (  0,  1)   { 50}               }
-  \put( 200,-100){\line    (  0,  1)   {100}               }
-
-  \put(-340,- 90){\makebox (100, 45)[t]{uniform cost}      }
-  \put(-190,- 90){\makebox (100, 45)[t]{absolute cost}     }
-  \put(- 40,- 90){\makebox (100, 45)[t]{squared cost}      }
-  \put(-340,- 90){\makebox (100, 45)[b]{(mode of pdf)}     }
-  \put(-190,- 90){\makebox (100, 45)[b]{(median of pdf)}   }
-  \put(- 40,- 90){\makebox (100, 45)[b]{(mean of pdf)}     }
-
-  \put(-400,-150){\framebox(100, 50)[c]{MAP}               }
-  \put(-250,-150){\framebox(100, 50)[c]{---}               }
-  \put(-100,-150){\framebox(100, 50)[c]{mean square}       }
-  \put( 150,-150){\framebox(100, 50)[c]{mini-max}          }
-
-  \put(-340,-200){\makebox (100, 50)[l]{no prior probability information}}
-  \put(-350,-200){\line    (  0,  1)   { 50}               }
-  \put(-400,-250){\framebox(100, 50)[c]{ML}                }
-
-  \put( 210,-200){\makebox (100, 50)[l]{no cost function}  }
-  \put( 200,-200){\line    (  0,  1)   { 50}               }
-  \put( 150,-250){\framebox(100, 50)[c]{}                  }
-  \put( 150,-240){\makebox (100, 30)[t]{Neyman-}    }
-  \put( 150,-240){\makebox (100, 30)[b]{Pearson}    }
-
-\end{picture}
+\includegraphics{graphics/latestimation.pdf}
+%20190407%\setlength{\unitlength}{0.2mm}
+%20190407%\begin{picture}(650,350)(-400,-250)
+%20190407%  \thicklines
+%20190407%  %\graphpaper[10](0,0)(700,100)
+%20190407%  \put(- 50,  50){\framebox(100, 50)[c]{Bayesian}          }
+%20190407%  \put(  60,  50){\makebox (200, 50)[l]{pdf known and cost function defined}}
+%20190407%  \put(   0,   0){\line    (  0,  1)   { 50}               }
+%20190407%  \put(-200,   0){\line    (  1,  0)   {400}               }
+%20190407%  \put(-200,- 50){\line    (  0,  1)   { 50}               }
+%20190407%  \put( 200,- 50){\line    (  0,  1)   { 50}               }
+%20190407%
+%20190407%  \put(-190,- 50){\makebox (100, 50)[l]{pdf known}         }
+%20190407%  \put( 210,- 50){\makebox (100, 50)[l]{pdf not known}     }
+%20190407%  \put(-350,- 50){\line    (  1,  0)   {300}               }
+%20190407%  \put(-350,-100){\line    (  0,  1)   { 50}               }
+%20190407%  \put(-200,-100){\line    (  0,  1)   { 50}               }
+%20190407%  \put(- 50,-100){\line    (  0,  1)   { 50}               }
+%20190407%  \put( 200,-100){\line    (  0,  1)   {100}               }
+%20190407%
+%20190407%  \put(-340,- 90){\makebox (100, 45)[t]{uniform cost}      }
+%20190407%  \put(-190,- 90){\makebox (100, 45)[t]{absolute cost}     }
+%20190407%  \put(- 40,- 90){\makebox (100, 45)[t]{squared cost}      }
+%20190407%  \put(-340,- 90){\makebox (100, 45)[b]{(mode of pdf)}     }
+%20190407%  \put(-190,- 90){\makebox (100, 45)[b]{(median of pdf)}   }
+%20190407%  \put(- 40,- 90){\makebox (100, 45)[b]{(mean of pdf)}     }
+%20190407%
+%20190407%  \put(-400,-150){\framebox(100, 50)[c]{MAP}               }
+%20190407%  \put(-250,-150){\framebox(100, 50)[c]{---}               }
+%20190407%  \put(-100,-150){\framebox(100, 50)[c]{mean square}       }
+%20190407%  \put( 150,-150){\framebox(100, 50)[c]{mini-max}          }
+%20190407%
+%20190407%  \put(-340,-200){\makebox (100, 50)[l]{no prior probability information}}
+%20190407%  \put(-350,-200){\line    (  0,  1)   { 50}               }
+%20190407%  \put(-400,-250){\framebox(100, 50)[c]{ML}                }
+%20190407%
+%20190407%  \put( 210,-200){\makebox (100, 50)[l]{no cost function}  }
+%20190407%  \put( 200,-200){\line    (  0,  1)   { 50}               }
+%20190407%  \put( 150,-250){\framebox(100, 50)[c]{}                  }
+%20190407%  \put( 150,-240){\makebox (100, 30)[t]{Neyman-}    }
+%20190407%  \put( 150,-240){\makebox (100, 30)[b]{Pearson}    }
+%20190407%
+%20190407%\end{picture}
 \caption{
    Estimation criterion
    \label{fig:est-criterion}
