--- a/common/fs.tex
+++ b/common/fs.tex
@@ -99,7 +99,7 @@ Let $\opFS$ be the Fourier Series operator.
   $
 \end{array}}
 \end{theorem}
-\begin{proofns}
+\begin{proof}
 The proof of the pointwise convergence of the Fourier Series is notoriously difficult.
 It was conjectured in 1913 by Nokolai Luzin that the Fourier Series for all square summable periodic functions 
 are pointwise convergent:
@@ -185,7 +185,7 @@ no means a real proof (but at least it is less than 175 pages).
      \\&=    \opI \Fx(n)
        &&    \text{by definition of $\opI$ \ifdochas{operator}{(\prefp{def:opI})}} 
 \end{align*}
-\end{proofns}
+\end{proof}
 
 
 %--------------------------------------
