--- a/common/latb.tex
+++ b/common/latb.tex
@@ -149,7 +149,7 @@ $\meetop\setX\eqd\bzero$.
   \end{array}}%
   }
 \end{proposition}
-\begin{proofns}
+\begin{proof}
 \begin{align*}
   x \join \bid
     &= x \join \brp{\joinop\setX}
@@ -201,7 +201,7 @@ $\meetop\setX\eqd\bzero$.
     && \text{because $\setn{x}\subseteq\setn{x,\lid}$ and by \prope{isotone} property of $\meetop$ \xref{prop:orel_isotone}}
   \\&= \boxed{x}
 \end{align*}
-\end{proofns}
+\end{proof}
 
 %---------------------------------------
 \begin{definition}
