--- a/common/latd.tex
+++ b/common/latd.tex
@@ -1672,7 +1672,7 @@ Let $\latticed$ be a lattice.
   \latticed \text{ is \prope{modular}. }
   }
 \end{theorem}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that distributivity $\implies$ modularity:
     \begin{align*}
@@ -1686,7 +1686,7 @@ Let $\latticed$ be a lattice.
   \item Proof that distributivity $\notimpliedby$ modularity: \\
     By \prefp{lem:lat_M3}, the $M3$ lattice is modular, but yet it is \prope{non-distributive}.
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 %Because the more general case of lattices support
 %the \hie{principle of duality} \xref{thm:lat_duality},
