--- a/common/latval.tex
+++ b/common/latval.tex
@@ -46,7 +46,7 @@ Let $\latval\in\clFxr$ be a \fncte{function} on a \structe{lattice} $\latL\eqd\l
   \end{array}}
   }
 \end{proposition}
-\begin{proofns}
+\begin{proof}
 %Let $\setX\eqd\setxZ{x_n}$ such that $m\le n\implies x_m\orel x_n$.
 Let $x,y\in\setX$ such that $x\orel y$ or $y\lneq x$.
 \begin{align*}
@@ -54,7 +54,7 @@ Let $x,y\in\setX$ such that $x\orel y$ or $y\lneq x$.
     &= \latval(x) + \latval(y)
     && \text{because $\latL$ is \prope{linear}}
 \end{align*}
-\end{proofns}
+\end{proof}
 
 %---------------------------------------
 \begin{example}
@@ -65,9 +65,9 @@ Let $x,y\in\setX$ such that $x\orel y$ or $y\lneq x$.
 Consider the \structe{real valued lattice} $\latL\eqd\lattice{\R}{\le}{\join}{\meet}$.
 The \fncte{absolute value} function $\absn$ is a \fncte{valuation} on $\latL$.
 \end{example}
-\begin{proofns}
+\begin{proof}
   $\latL$ is \prope{linear} \xref{def:latlin}, so $\latval$ is a \fncte{valuation} by \prefpp{prop:latval_linear}.
-\end{proofns}
+\end{proof}
 
 %%---------------------------------------
 %\begin{example}
@@ -78,9 +78,9 @@ The \fncte{absolute value} function $\absn$ is a \fncte{valuation} on $\latL$.
 %Consider the \structe{real valued lattice} $\latL\eqd\lattice{\R}{\le}{\join}{\meet}$.
 %The \fncte{absolute value} function $\absn$ is a \fncte{valuation} on $\latL$.
 %\end{example}
-%\begin{proofns}
+%\begin{proof}
 %  $\latL$ is \prope{linear} \xref{def:latlin}, so $\latval$ is a \fncte{valuation} by \prefpp{prop:latval_linear}.
-%\end{proofns}
+%\end{proof}
 
 
 %%---------------------------------------
@@ -260,7 +260,7 @@ Let $\height(x)$ be the \fncte{height} \xref{def:height} of a point $x$ in a
 \end{array}$
 }
 \end{proposition}
-%\begin{proofns}
+%\begin{proof}
 %\begin{enumerate}
 %  \item Proof that $\height(x)$ is a \fncte{valuation}:
 %    \begin{enumerate}
@@ -276,7 +276,7 @@ Let $\height(x)$ be the \fncte{height} \xref{def:height} of a point $x$ in a
 %        and \fncte{length} \xref{def:length}.
 %  \item Proof that $\metric{x}{y}$ is a \fncte{metric}: This follows from previous items and \prefpp{def:latmetric}.
 %\end{enumerate}
-%\end{proofns}
+%\end{proof}
 
 
 %---------------------------------------
