--- a/common/latvar.tex
+++ b/common/latvar.tex
@@ -144,7 +144,7 @@
 %lab.tex%  \end{array}}%
 %lab.tex%  }
 %lab.tex%\end{proposition}
-%lab.tex%\begin{proofns}
+%lab.tex%\begin{proof}
 %lab.tex%\begin{align*}
 %lab.tex%  x \join \bid
 %lab.tex%    &= x \join \brp{\joinop\setX}
@@ -196,7 +196,7 @@
 %lab.tex%    && \text{because $\setn{x}\subseteq\setn{x,\lid}$ and by \prope{isotone} property of $\meetop$ \xref{prop:orel_isotone}}
 %lab.tex%  \\&= \boxed{x}
 %lab.tex%\end{align*}
-%lab.tex%\end{proofns}
+%lab.tex%\end{proof}
 %lab.tex%
 %lab.tex%%---------------------------------------
 %lab.tex%\begin{definition}
