--- a/common/mra.tex
+++ b/common/mra.tex
@@ -739,7 +739,7 @@ This is \emph{not} necessarily true if the intersection contains more than just 
 %  $\spV_j$ & has an \structe{orthonormal basis} & \forall j\in\Z
 %\end{array}}
 %\end{proposition}
-%\begin{proofns}
+%\begin{proof}
 %\begin{enume}
 %  %\item By \prefp{def:mra}, $\spLLR$ is \prope{separable}.
 %  \item $\spLLR$ is \prope{separable}.
@@ -747,7 +747,7 @@ This is \emph{not} necessarily true if the intersection contains more than just 
 %  \item Therefore each $\spV_j$ is \prope{separable}\ifsxref{subspace}{prop:Vn_separable}.
 %  \item So each $\spV_j$ has an orthonormal basis\ifsxref{frames}{thm:ortho<==>separable}.
 %\end{enume}
-%\end{proofns}
+%\end{proof}
 
 %=======================================
 \section{Dilation equation}
