--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -211,7 +211,7 @@ Let $\seqn{\alpha_n\in\C}$, $\seqn{b_n\in\C}$, and $x\in\C$.
   x^n
   }
 \end{theorem}
-\begin{proofns}
+\begin{proof}
 %\begin{enumerate}
 %\item 
 \begin{align*}
@@ -273,7 +273,7 @@ Let $\seqn{\alpha_n\in\C}$, $\seqn{b_n\in\C}$, and $x\in\C$.
       k\ge\max(0,n-\xM)$
   \end{enumerate}
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 %=======================================
 %\subsection {Division}
