--- a/common/relneg.tex
+++ b/common/relneg.tex
@@ -177,14 +177,14 @@ the \rele{orthogonality} relation $\orthog$ is in general \prope{non-associative
   x\orthog z$
 }
 \end{remark}
-\begin{proofns}
+\begin{proof}
 Consider the $\latL_2^4$ \structe{Boolean lattice} in \prefpp{ex:latoc}.
 \\\begin{tabular}{cl}
     \imark & $a^\ocop \orthog p$ because $a^\ocop\orel p^\ocop$.
   \\\imark & $p \orthog r$  because $p\orel r^\ocop$.
   \\\imark & But yet $a^\ocop$ is \emph{not} orthogonal to $r$ because $a^\ocop\nleq r^\ocop$.
 \end{tabular}
-\end{proofns}
+\end{proof}
 
 
 %---------------------------------------
@@ -692,9 +692,9 @@ Let $\latL\eqd\latocd$ be an \structe{orthocomplemented lattice} \xref{def:latoc
   $\lzero$ and $\lid$ are in the \structb{center} of $\latL$.
   }
 \end{proposition}
-\begin{proofns}
+\begin{proof}
 This follows directly from \prefpp{def:latn_commutes} and \prefpp{prop:commutes}.
-\end{proofns}
+\end{proof}
 
 %---------------------------------------
 \begin{theorem}
