--- a/common/subspace.tex
+++ b/common/subspace.tex
@@ -205,7 +205,7 @@ and $\vzero$ the zero vector of $\spX$.
     \end{array}}
   }
 \end{proposition}
-\begin{proofns}
+\begin{proof}
     \begin{align*}
       \text{$\spY$ is a \structe{subspace}}
         &\implies \exists (\alpha\vy)\in\spY\quad\forall\alpha\in\F
@@ -219,7 +219,7 @@ and $\vzero$ the zero vector of $\spX$.
       \\&\implies \lambda\vx+(1-\lambda)\vy\in\setY \,\forall\vx,\vy\in\setY
       \\&\implies \text{$\spY$ is \prope{convex}}
     \end{align*}
-\end{proofns}
+\end{proof}
 
 %======================================
 %\section{Operations on subspaces}
@@ -1248,7 +1248,7 @@ Let $\spH$ be a Hilbert space and $\pset{\spH}$ the set of closed linear subspac
     \\5. & \spX\orel \spY &\implies& \spX \adds \brp{\spXo \spi \spY} = \spY &\forall \spX,\spY\in\setX & (\prope{orthomodular identity})
 \end{array}$}
 \end{theorem}
-\begin{proofns}
+\begin{proof}
 \begin{enume}
   \item Proof for \prope{complemented} (1) property: by \thme{Projection Theorem} \xref{thm:projection}.
   \item Proof for \prope{complemented} (2) property: by \prefpp{cor:inprod_orthog}.
@@ -1257,7 +1257,7 @@ Let $\spH$ be a Hilbert space and $\pset{\spH}$ the set of closed linear subspac
   \item Proof for \prope{orthomodular identity} property: 
   \item Proof that lattice is \prope{orthomodular}: by 5 properties and definition of \structe{orthomodular lattice}\ifsxref{ortholat}{def:latom}.
 \end{enume}
-\end{proofns}
+\end{proof}
 
 %%---------------------------------------
 %\begin{theorem}
