--- a/abcstat/graphics/shell_latestimation.tex
+++ b/abcstat/graphics/shell_latestimation.tex
@@ -7,8 +7,8 @@
 \input{shelltop.tex}%
 \begin{document}%
   %\psset{unit=2\latunit}%
-  \psset{xunit=1.0\latunit}%
-  \psset{yunit=1.2\latunit}%
+  %\psset{xunit=1.0\latunit}%
+  %\psset{yunit=1.0\latunit}%
   \gsize%
   \input{../../common/math/graphics/latestimation.tex}%
 \end{document}%
