--- a/common/logic.tex
+++ b/common/logic.tex
@@ -687,7 +687,7 @@ Let $\latL\eqd\logicX$ be a \structe{logic} \xref{def:logic}.
   %          \end{array}\quad\scy\forall x,y\in\setX}$
   }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is an \fncte{ortho negation}: by \prefpp{def:negor}
   \item Proof that $\limp$ is an \fncte{implication} with \prope{strong entailment} and \prope{strong modus ponens}:
@@ -697,7 +697,7 @@ Let $\latL\eqd\logicX$ be a \structe{logic} \xref{def:logic}.
         \item By \prefpp{ex:limpx}, $\limp$ has \prope{strong entailment} and \prope{strong modus ponens}.
     \end{enumerate}
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 The \structe{classical logic} (previous example) can be generalized in several ways.
 Arguably one of the simplest of these is the 3-valued logic due to Kleene (next example).
@@ -736,7 +736,7 @@ Arguably one of the simplest of these is the 3-valued logic due to Kleene (next 
             \end{array}\quad\scy\forall x,y\in\setX}$
   }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is a \fncte{Kleene negation}: see \prefpp{ex:negat_L3_kl}
   \item Proof that $\limp$ is an \fncte{implication}: 
@@ -744,7 +744,7 @@ Arguably one of the simplest of these is the 3-valued logic due to Kleene (next 
   \item Proof that $\limp$ does not have \prope{strong entailment}: $n\limp n=n=n\join n\neq\lid$.
   \item Proof that $\limp$ does not have \prope{strong modus ponens}: $n\limp\lzero=n=\negat{n}\join\lzero\nleq\lzero$.
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 A lattice and negation alone do not uniquely define a logic. 
 /-Lukasiewicz also introduced a 3-valued logic with identical lattice structure to Kleene,
@@ -795,7 +795,7 @@ Historically, /-Lukasiewicz's logic was introduced before Kleene's.
                \end{array}}$
 %  }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is a \fncte{Kleene negation}: see \prefpp{ex:negat_L3_kl}
   \item Proof that $\limp$ is an \fncte{implication}: 
@@ -803,7 +803,7 @@ Historically, /-Lukasiewicz's logic was introduced before Kleene's.
  %\item Proof that $\limp$ does not have \prope{strong entailment}: $n\limp n=n=n\join n\neq\lid$.
   \item Proof that $\limp$ does not have \prope{strong modus ponens}: $n\limp\lzero=n=\negat{n}\join\lzero\nleq\lzero$.
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 %---------------------------------------
 \begin{example}[\exmd{RM$_3$ logic}]
@@ -841,7 +841,7 @@ Historically, /-Lukasiewicz's logic was introduced before Kleene's.
             \end{array}\qquad\scy\forall x,y\in\setX}$
   }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is a \fncte{Kleene negation}: see \prefpp{ex:negat_L3_kl}
   \item Proof that $\limp$ is an \fncte{implication}: 
@@ -849,7 +849,7 @@ Historically, /-Lukasiewicz's logic was introduced before Kleene's.
   \item Proof that $\limp$ does not have \prope{strong entailment}: $n\limp n=n=n\join n\neq\lid$.
   %\item Proof that $\limp$ does not have \prope{strong modus ponens}: $n\limp\lzero=n=\negat{n}\join\lzero\nleq\lzero$.
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 In a 3-valued logic, the negation does not necessarily have to be as in the previous three examples.
 The next example offers a different negation.
@@ -893,12 +893,12 @@ The next example offers a different negation.
             \end{array}\quad\scy\forall x,y\in\setX}$
   }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is a \fncte{Kleene negation}: see \prefpp{ex:negat_L3_intfuz}
   \item Proof that $\limp$ is an \fncte{implication}: by definition of \fncte{implication} \xref{def:limp}
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 Of course it is possible to generalize to more than 3 values (next example).
 %---------------------------------------
@@ -1173,7 +1173,7 @@ in the previous and following examples both have identical lattices, but are neg
             \end{array}}\qquad\scy\forall x,y\in\setX$
   }
 \end{example}
-\begin{proofns}
+\begin{proof}
 \begin{enumerate}
   \item Proof that $\negat$ is a \fncte{Kleene negation}: see \prefpp{ex:negat_o6slash}
   \item Proof that $\limp$ is an \fncte{implication}: 
@@ -1187,7 +1187,7 @@ in the previous and following examples both have identical lattices, but are neg
       \negat{n}\meet(n\limp\lzero) &=& p\meet n &=& n &\orel& p &=& \negat{n}\join \lzero &\nleq& \lzero
     \end{array}$
 \end{enumerate}
-\end{proofns}
+\end{proof}
 
 
 For an example of an 8-valued logic, see \citeP{kamide2013}.
