2019xcor work in progress

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1917,16 +1917,15 @@
     \hfill\pencilFlat%
   }%
 
-%20190405\newenvironment{proofns}
-%20190405  {
-%20190405    \pencilTipDown%                       pencil with tip down
-%20190405    {\scshape\footnotesize Proof: }%
-%20190405    \begin{small}%                        change font size
-%20190405  }
-%20190405  {
-%20190405    \end{small}%                          end new font size
-%20190405    \hfill\pencilFlat%                    pencil lying flat
-%20190405  }
+\newenvironment{proofns}{\begin{proof}}{\end{proof}}%
+%20190408%    \pencilTipDown%                       pencil with tip down
+%20190408%    {\scshape\footnotesize Proof: }%
+%20190408%    \begin{small}%                        change font size
+%20190408%  }%
+%20190408%  {%
+%20190408%    \end{small}%                          end new font size
+%20190408%    \hfill\pencilFlat%                    pencil lying flat
+%20190408%  }%
 
 %---------------------------------------
 % formula boxes
