--- a/common/xcordef.tex
+++ b/common/xcordef.tex
@@ -6,35 +6,30 @@
 \chapter{The Effects of the Cross-Correlation Definition}
 \label{app:xcordef}
 %======================================
-
-%---------------------------------------
-\begin{remark}
-\label{rem:Rxym}
-%---------------------------------------
 In the literature, there are varying and in general incompatible definitions of
 \fncte{cross-correlation} functions $\Rxy(n,m)$ and $\Rxy(m)$ \xxref{def:Rxynm}{def:Rxym}.
-The choice of definitions has consequences for results involving $\Swxy$ \xref{cor:Swxy}.
+The choice of definitions has consequences for results involving $\Swxy$ \xref{def:Swxy}.
 Here is a very limited overview:
-\\\indentx$\begin{array}{>{\qquad}cNM>{\ds}rc>{\ds}l}
+\\\defbox{\begin{array}{>{\qquad}cNM>{\ds}rc>{\ds}l}
   \mc{6}{M}{References that put conjugate $\conj$ on $\rvy$:}
-  \\&\imark&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &=& E\brb{\rvx(m)\rvy^\ast(0)}
-  \\&\imark&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &=& E\brs{\rvx(m)\rvy^\ast(0)}
-  \\&\imark&\citeP{matlab_xcorr} & R_{xy}(m) &=& E\setn{x_{n+m}y_n^\ast}
-  \\&\imark&\citeP{matlab_cpsd}  & R_{xy}(m) &=& E\setn{x_{n+m}y_n^\ast}
+  \\&\imark&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &\eqd& E\brb{\rvx(m)\rvy^\ast(0)}
+  \\&\imark&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &\eqd& E\brs{\rvx(m)\rvy^\ast(0)}
+  \\&\imark&\citeP{matlab_xcorr}                    & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
+  \\&\imark&\citeP{matlab_cpsd}                     & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
   \\
   \mc{6}{M}{References that put conjugate $\conj$ on $\rvx$:}
-  \\&\imark&\citerpg{kay1988}{52}{8131733564}       & r_{xy}[m] &=& \mathcal{E}\brb{x^\ast[0]y[m]}
-  \\&\imark&\citerpg{weisstein2002}{594}{1420035223}\footnotemark& f\star g  &=& \int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
-  \\&\imark&\citePpc{leuridan1986}{2}{(7) $GXY_1=\sum X_1^\ast Y$}
+  \\&\imark&\citerpg{kay1988}{52}{8131733564}                    & r_{xy}[m] &\eqd& \mathcal{E}\brb{x^\ast[0]y[m]}
+  \\&\imark&\citerpg{weisstein2002}{594}{1420035223}\footnotemark& f\star g  &\eqd& \int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
+  \\&\imark&\citePpc{leuridan1986}{2}{(7)}                       & GXY_1     &\eqd& \sum X_1^\ast Y
   \\
   \mc{6}{M}{References that use no conjugate $\conj$:}
-  \\&\imark&\citerpg{bendat2011}{111}{1118210824}   & R_{xy}(m)            &=& E\brs{\rvx(0)\rvy(m)}
-  \\&\imark&\citerpg{helstrom1991}{369}{0023535717} & \Rxy(t_1,t_2)        &=& E[\rvx(t_1)\rvy(t_2)]
-  \\&\imark&\citerpg{proakis1996}{A4}{0133737624}   & \gamma_{xy}(t_1,t_2) &=& E(X_{t_1}Y_{t_2})
-  \\&\imark&\citerpg{shin2008}{280}{0470725648}     & R_{xy}(\tau)         &=& E[x(t)y(t+\tau)]
-  \\&\imark&\citerpg{bracewell1978}{46}{007007013X}\footnotemark & g^\ast\star h  &=& \int_{-\infty}^{\infty}g^\ast(u)h(u+x)\du   %{Pentagram notation for cross correlation}
-\end{array}$
-\addtocounter{footnote}{-2}
+  \\&\imark&\citerpg{bendat2010}{111}{1118210824}          & R_{xy}(m)            &\eqd& E\brs{\rvx(0)\rvy(m)}
+  \\&\imark&\citerpg{helstrom1991}{369}{0023535717}        & \Rxy(t_1,t_2)        &\eqd& E[\rvx(t_1)\rvy(t_2)]
+  \\&\imark&\citerpg{proakis1996}{A4}{0133737624}          & \gamma_{xy}(t_1,t_2) &\eqd& E(X_{t_1}Y_{t_2})
+  \\&\imark&\citerpg{shin2008}{280}{0470725648}            & R_{xy}(\tau)         &\eqd& E[x(t)y(t+\tau)]
+  \\&\imark&\citerpg{bracewell1978}{46}{007007013X}\footnotemark & g^\ast\star h  &\eqd& \int_{-\infty}^{\infty}g^\ast(u)h(u+x)\du   %{Pentagram notation for cross correlation}
+\end{array}}
+\addtocounter{footnote}{-1}
 \footnotetext{
   Bracewell and Weisstein here use the \ope{integral operator} $\int_{\R}\!\dx$ rather than the 
   \ope{expectation operator} $\pE$. 
@@ -54,10 +49,14 @@ Here is a very limited overview:
   (and hence in the ``References that use no conjugate" category).
   }
 
+%---------------------------------------
+\begin{remark}
+\label{rem:Rxym}
+%---------------------------------------
 Note the following:
 \begin{enumerate}
 \item Depending on how we define $\Rxy(m)$ we can get 8 different results for $\Swxy(\omega)$:\label{item:RxySwxy}
-\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
+\\\propbox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
     (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&( &\omega)\Swxx(\omega)
   \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &( &\omega)\Swxx(\omega)
   \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(-&\omega)\Swxx(\omega)
@@ -96,7 +95,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 
 \item In the special case where $\rvx[n]$ and $\rvy[n]$ are \propb{real-valued} and by 
       \prefpp{thm:dtft_conjneg_real}, \pref{item:RxySwxy} becomes
-\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l@{\hspace{0pt}}l}
+\\\propbox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l@{\hspace{0pt}}l}
     (1s).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
   \\(2s).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
   \\(3s).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
@@ -202,7 +201,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
     \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy(0)}
       && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
     \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
-      && \text{by prope{LTI} property}
+      && \text{by \prope{LTI} property}
     \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
       && \text{by \prope{linearity} of $\sum$}
     \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
